--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <title>Udemy Art</title>
   </head>
   <body>
 
