--- a/index.html
+++ b/index.html
@@ -86,7 +86,15 @@
       </nav>
 
       <header class="header">
-        <div class="alarm"></div>
+
+      <div class="back-ground-header">
+        <div class="new-to-udemy">
+          <strong class="title"> New to udemy?Lucky you. </strong>
+          <div class="details">
+            Courses start at E169.99 Get your new student offer before it expires.
+          </div>
+        </div>
+      </div>
       </header>
 
       <section class="courses-section">
