--- a/index.html
+++ b/index.html
@@ -11,16 +11,9 @@
         crossorigin="anonymous"
         referrerpolicy="no-referrer"
       />
-      <link
-        rel="stylesheet"
-        href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
-        integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
-        crossorigin="anonymous"
-      />
-      <title>Udemy Art</title>
+      <title>Udemy Clone</title>
     </head>
     <body>
-
       <div class="offer">
         <div class="part1">
           <div class="tiny">
@@ -31,7 +24,6 @@
         </div>
         <div class="part2">X</div>
       </div>
-
       <nav class="nav-bar">
         <ul>
           <li class="nav-lst bars">
@@ -48,7 +40,9 @@
               />
             </a>
           </li>
-          <li class="nav-lst category">Categories</li>
+          <li class="nav-lst category">
+            Categories
+          </li>
           <li class="nav-lst search-bar">
             <form action="" class="search-bar-form">
               <button type="submit" class="search-icon">
@@ -62,11 +56,11 @@
               />
             </form>
           </li>
-          <li class="nav-lst udemy-business">
-            <a href="#">udemy business</a>
+          <li class="nav-lst-udemy-business">
+            <a href="#" class="special">Udemy Business</a>
           </li>
           <li class="nav-lst teach-on-udemy">
-            <a href="#">teach on udemy</a>
+            <a href="#" class="special">Teach on Udemy</a>
           </li>
           <li class="nav-lst shop-card">
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
@@ -84,9 +78,7 @@
           </li>
         </ul>
       </nav>
-
       <header class="header">
-
       <div class="back-ground-header">
         <div class="new-to-udemy">
           <strong class="title"> New to udemy?Lucky you. </strong>
@@ -96,7 +88,6 @@
         </div>
       </div>
       </header>
-
       <section class="courses-section">
         <ul class="lst-of-courses">
           <li class="type-of-corses active"><a href="#">Python</a></li>
@@ -115,8 +106,7 @@
               using this incredibly useful language.its simple syntax and
               readability makes python perfect for Flask, Django, data Science,
               and machine learning. You'll learn how to build everything from
-              games to websites to apps. Choose from a range of courses that
-              appeal to...
+              games to websites to apps.
             </span>
           </div>
           <button type="button" class="btn-Explore">Explore python</button>
