--- a/index.html
+++ b/index.html
@@ -1,228 +1,234 @@
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="./style.css" />
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
-        integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      />
-      <title>Udemy Clone</title>
-    </head>
-    <body>
-      <div class="offer">
-        <div class="part1">
-          <div class="tiny">
-            Get courses from E169.99 for a limited time |
-            <span>A special offer for new students </span>
-          </div>
-          <strong class="endsin">Ends in 5h 59m 27s.</strong>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
+      integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+      crossorigin="anonymous"
+    />
+    <title>Udemy Clone</title>
+  </head>
+  <body>
+    <div class="offer">
+      <div class="part1">
+        <div class="tiny">
+          Get courses from E169.99 for a limited time |
+          <span>A special offer for new students </span>
         </div>
-        <div class="part2">X</div>
+        <strong class="endsin">Ends in 5h 59m 27s.</strong>
       </div>
-      <nav class="nav-bar">
-        <ul>
-          <li class="nav-lst bars">
-            <div class="bars-icon">
-              <i class="fa-solid fa-bars"></i>
-            </div>
-          </li>
-          <li class="nav-lst logo">
-            <a href="/">
-              <img
-                class="udemy-logo"
-                src="./image/logo-udemy.svg"
-                alt="udemy logo"
-              />
-            </a>
-          </li>
-          <li class="nav-lst category">
-            Categories
-          </li>
-          <li class="nav-lst search-bar">
-            <form action="" class="search-bar-form">
-              <button type="submit" class="search-icon">
-                <i class="fa-solid fa-magnifying-glass"></i>
-              </button>
-              <input
-                type="text"
-                name="search-input"
-                class="search-input"
-                placeholder="seach for anything"
-              />
-            </form>
-          </li>
-          <li class="nav-lst-udemy-business">
-            <a href="#" class="special">Udemy Business</a>
-          </li>
-          <li class="nav-lst teach-on-udemy">
-            <a href="#" class="special">Teach on Udemy</a>
-          </li>
-          <li class="nav-lst shop-card">
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-          </li>
-          <li class="nav-lst login">
-            <button class="btn btn-login">Log in</button>
-          </li>
-          <li class="nav-lst signin">
-            <button class="btn btn-signin">Sign up</button>
-          </li>
-          <li class="nav-lst net-logo">
-            <div>
-              <a href="#"><i class="fa-solid fa-globe"></i></a>
-            </div>
-          </li>
-        </ul>
-      </nav>
-      <header class="header">
-      <div class="back-ground-header">
-        <div class="new-to-udemy">
-          <strong class="title"> New to udemy?Lucky you. </strong>
-          <div class="details">
-            Courses start at E169.99 Get your new student offer before it expires.
+      <div class="part2">X</div>
+    </div>
+    <nav class="nav-bar">
+      <ul>
+        <li class="nav-lst bars">
+          <div class="bars-icon">
+            <i class="fa-solid fa-bars"></i>
           </div>
+        </li>
+        <li class="nav-lst logo">
+          <a href="/">
+            <img
+              class="udemy-logo"
+              src="./image/logo-udemy.svg"
+              alt="udemy logo"
+            />
+          </a>
+        </li>
+        <li class="nav-lst category">
+          Categories
+        </li>
+        <li class="nav-lst search-bar">
+          <form action="" class="search-bar-form">
+            <button type="submit" class="search-icon">
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </button>
+            <input
+              type="text"
+              name="search-input"
+              class="search-input"
+              placeholder="seach for anything"
+            />
+          </form>
+        </li>
+        <li class="nav-lst-udemy-business">
+          <a href="#" class="special">Udemy Business</a>
+        </li>
+        <li class="nav-lst teach-on-udemy">
+          <a href="#" class="special">Teach on Udemy</a>
+        </li>
+        <li class="nav-lst shop-card">
+          <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </li>
+        <li class="nav-lst login">
+          <button class="btn btn-login">Log in</button>
+        </li>
+        <li class="nav-lst signin">
+          <button class="btn btn-signin">Sign up</button>
+        </li>
+        <li class="nav-lst net-logo">
+          <div>
+            <a href="#"><i class="fa-solid fa-globe"></i></a>
+          </div>
+        </li>
+      </ul>
+    </nav>
+    <header class="header">
+    <div class="back-ground-header">
+      <div class="new-to-udemy">
+        <strong class="title"> New to udemy?Lucky you. </strong>
+        <div class="details">
+          Courses start at E169.99 Get your new student offer before it expires.
         </div>
       </div>
-      </header>
-      <section class="courses-section">
-        <ul class="lst-of-courses">
-          <li class="type-of-corses active"><a href="#">Python</a></li>
-          <li class="type-of-corses"><a href="#">Excel</a></li>
-          <li class="type-of-corses"><a href="#">Web Development</a></li>
-          <li class="type-of-corses"><a href="#">JavaScript</a></li>
-          <li class="type-of-corses"><a href="#">Data Science</a></li>
-          <li class="type-of-corses"><a href="#">AWS Certificate</a></li>
-          <li class="type-of-corses"><a href="#">Drawing</a></li>
-        </ul>
-        <div class="show-courses">
-          <div class="hder-of-courses-section">
-            <span class="title">Expand your career opportunities with Python</span>
-            <span class="details">
-              Take one of Udemy's range of python courses and learn how to code
-              using this incredibly useful language.its simple syntax and
-              readability makes python perfect for Flask, Django, data Science,
-              and machine learning. You'll learn how to build everything from
-              games to websites to apps.
+    </div>
+    </header>
+    <section class="courses-section">
+      <ul class="lst-of-courses">
+        <li class="type-of-corses active"><a href="#">Python</a></li>
+        <li class="type-of-corses"><a href="#">Excel</a></li>
+        <li class="type-of-corses"><a href="#">Web Development</a></li>
+        <li class="type-of-corses"><a href="#">JavaScript</a></li>
+        <li class="type-of-corses"><a href="#">Data Science</a></li>
+        <li class="type-of-corses"><a href="#">AWS Certificate</a></li>
+        <li class="type-of-corses"><a href="#">Drawing</a></li>
+      </ul>
+      <div class="show-courses">
+        <div class="hder-of-courses-section">
+          <span class="title">Expand your career opportunities with Python</span>
+          <span class="details">
+            Take one of Udemy's range of python courses and learn how to code
+            using this incredibly useful language.its simple syntax and
+            readability makes python perfect for Flask, Django, data Science,
+            and machine learning. You'll learn how to build everything from
+            games to websites to apps.
+          </span>
+        </div>
+        <button type="button" class="btn-Explore">Explore python</button>
+        <div class="lst-courses">
+          <div class="card">
+            <span class="card-img">
+              <a href="#"><img src="./image/python1.jpg" alt="python" /></a>
             </span>
+            <div class="card-info">
+              <span class="card-title">
+                Learn Python: The Complete Python Programming Course
+              </span>
+              <span class="card-auther">Avinash Jain, The Codex</span>
+              <div class="card-rate">
+                <ul id="ul-list">
+                  <i>4.6</i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star-half-alt" style="color: #f4c150"></i>
+                </ul>
+              </div>
+              <span class="card-price">E£679.99</span>
+            </div>
           </div>
-          <button type="button" class="btn-Explore">Explore python</button>
-          <div class="lst-courses">
-            <div class="card">
-              <span class="card-img">
-                <a href="#"><img src="./image/python1.jpg" alt="python" /></a>
+          <div class="card">
+            <span class="card-img">
+              <a href="#"><img src="./image/python2.jpg" alt="python" /></a>
+            </span>
+            <div class="card-info">
+              <span class="card-title">
+                Learning Python for Data Analysis and Visualization
               </span>
-              <div class="card-info">
-                <span class="card-title">
-                  Learn Python: The Complete Python Programming Course
-                </span>
-                <span class="card-auther">Avinash Jain, The Codex</span>
-                <div class="card-rate">
-                  <ul id="ul-list">
-                    <i>4.6</i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star-half-alt" style="color: #f4c150"></i>
-                  </ul>
-                </div>
-                <span class="card-price">E£679.99</span>
+              <span class="card-auther">Jose Portilla</span>
+              <div class="card-rate">
+                <ul id="ul-list">
+                  <i>4.4</i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star-half-alt" style="color: #f4c150"></i>
+                </ul>
               </div>
+              <span class="card-price">E£1599.99</span>
             </div>
-            <div class="card">
-              <span class="card-img">
-                <a href="#"><img src="./image/python2.jpg" alt="python" /></a>
+          </div>
+          <div class="card">
+            <span class="card-img">
+              <a href="#"><img src="./image/python4.jpg" alt="python" /></a>
+            </span>
+            <div class="card-info">
+              <span class="card-title">
+                Python for Beginners - Learn Programming from scratch
               </span>
-              <div class="card-info">
-                <span class="card-title">
-                  Learning Python for Data Analysis and Visualization
-                </span>
-                <span class="card-auther">Jose Portilla</span>
-                <div class="card-rate">
-                  <ul id="ul-list">
-                    <i>4.4</i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star-half-alt" style="color: #f4c150"></i>
-                  </ul>
-                </div>
-                <span class="card-price">E£1599.99</span>
-              </div>
-            </div>
-            <div class="card">
-              <span class="card-img">
-                <a href="#"><img src="./image/python4.jpg" alt="python" /></a>
+              <span class="card-auther">
+                Edwin Diaz, Coding Faculty Solutions
               </span>
-              <div class="card-info">
-                <span class="card-title">
-                  Python for Beginners - Learn Programming from scratch
-                </span>
-                <span class="card-auther">
-                  Edwin Diaz, Coding Faculty Solutions
-                </span>
-                <div class="card-rate">
-                  <ul id="ul-list">
-                    <i>4.4</i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star-half-alt" style="color: #f4c150"></i>
-                  </ul>
-                </div>
-                <span class="card-price">E£679.99</span>
+              <div class="card-rate">
+                <ul id="ul-list">
+                  <i>4.4</i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star-half-alt" style="color: #f4c150"></i>
+                </ul>
               </div>
+              <span class="card-price">E£679.99</span>
             </div>
-            <div class="card">
-              <span class="card-img">
-                <a href="#"><img src="./image/python5.jpg" alt="python" /></a>
+          </div>
+          <div class="card">
+            <span class="card-img">
+              <a href="#"><img src="./image/python5.jpg" alt="python" /></a>
+            </span>
+            <div class="card-info">
+              <span class="card-title">Learn Python: Python for Beginners</span>
+              <span class="card-auther">Abrar Hussain</span>
+              <div class="card-rate">
+                <ul id="ul-list">
+                  <i>4.2</i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star-half-alt" style="color: #f4c150"></i>
+                </ul>
+              </div>
+              <span class="card-price">E£319.99</span>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-img">
+              <a href="#"><img src="./image/python3.jpg" alt="python" /></a>
+            </div>
+            <div class="card-info">
+              <span class="card-title">
+                Python Beyond the Basics - Object-Oriented Programming
               </span>
-              <div class="card-info">
-                <span class="card-title">Learn Python: Python for Beginners</span>
-                <span class="card-auther">Abrar Hussain</span>
-                <div class="card-rate">
-                  <ul id="ul-list">
-                    <i>4.2</i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star-half-alt" style="color: #f4c150"></i>
-                  </ul>
-                </div>
-                <span class="card-price">E£319.99</span>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-img">
-                <a href="#"><img src="./image/python3.jpg" alt="python" /></a>
-              </div>
-              <div class="card-info">
-                <span class="card-title">
-                  Python Beyond the Basics - Object-Oriented Programming
-                </span>
-                <span class="card-auther">Infinite Skills</span>
-                <span class="card-rate">
-                  <ul id="ul-list">
-                    <i>4.4</i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star" style="color: #f4c150"></i>
-                    <i class="fas fa-star-half-alt" style="color: #f4c150"></i>
-                  </ul>
-                </span>
-                <span class="card-price">E£519.99</span>
-              </div>
+              <span class="card-auther">Infinite Skills</span>
+              <span class="card-rate">
+                <ul id="ul-list">
+                  <i>4.4</i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star" style="color: #f4c150"></i>
+                  <i class="fas fa-star-half-alt" style="color: #f4c150"></i>
+                </ul>
+              </span>
+              <span class="card-price">E£519.99</span>
             </div>
           </div>
         </div>
-      </section>
-    </body>
-  </html>
+      </div>
+    </section>
+  </body>
+</html>
