--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -125,7 +126,6 @@
               <span class="card-title">
                 Learn Python: The Complete Python Programming Course
               </span>
-              <span class="card-auther">Avinash Jain, The Codex</span>
               <div class="card-rate">
                 <ul id="ul-list">
                   <i>4.6</i>
@@ -147,7 +147,6 @@
               <span class="card-title">
                 Learning Python for Data Analysis and Visualization
               </span>
-              <span class="card-auther">Jose Portilla</span>
               <div class="card-rate">
                 <ul id="ul-list">
                   <i>4.4</i>
@@ -169,9 +168,6 @@
               <span class="card-title">
                 Python for Beginners - Learn Programming from scratch
               </span>
-              <span class="card-auther">
-                Edwin Diaz, Coding Faculty Solutions
-              </span>
               <div class="card-rate">
                 <ul id="ul-list">
                   <i>4.4</i>
@@ -191,7 +187,6 @@
             </span>
             <div class="card-info">
               <span class="card-title">Learn Python: Python for Beginners</span>
-              <span class="card-auther">Abrar Hussain</span>
               <div class="card-rate">
                 <ul id="ul-list">
                   <i>4.2</i>
@@ -213,7 +208,6 @@
               <span class="card-title">
                 Python Beyond the Basics - Object-Oriented Programming
               </span>
-              <span class="card-auther">Infinite Skills</span>
               <span class="card-rate">
                 <ul id="ul-list">
                   <i>4.4</i>
@@ -230,5 +224,6 @@
         </div>
       </div>
     </section>
+    <script src="./script.js" type="module"></script>
   </body>
 </html>
